src/test/ui/borrowck/regions-escape-unboxed-closure.stderr
error: borrowed data cannot be stored outside of its closure
  --> $DIR/regions-escape-unboxed-closure.rs:16:32
   |
16 |     with_int(&mut |y| x = Some(y));
   |                   ---     -----^-
   |                   |       |    |
   |                   |       |    cannot be stored outside of its closure
   |                   |       cannot infer an appropriate lifetime
   |                   borrowed data cannot outlive this closure

error: aborting due to previous error

